--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "jquery": "^3.5.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "vue": "^2.6.14",
+    "vue-loader": "^15.9.7",
+    "vue-template-compiler": "^2.6.14"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.2"
   }
 }
