--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
+    "axios": "^0.21.1",
     "jquery": "^3.5.1",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.14",
+    "vue-eslint-parser": "^7.6.0",
     "vue-loader": "^15.9.7",
-    "vue-template-compiler": "^2.6.14"
+    "vue-router": "^3.5.1",
+    "vue-template-compiler": "^2.6.14",
+    "vuex": "^3.6.2"
   },
   "version": "0.1.0",
   "devDependencies": {
